# rat-website

./: Cargo.toml  Dockerfile  readme.md
scripts/: install_docker.sh
src/: main.rs
src/pages/: about.rs  homepage.rs  install.rs  mod.rs
src/templates/: about.html  homepage.html  install.html
static/: styles.css
